Fixed a number of issues found by Findbugs